--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     volumes:
       - ../app:/app
       - ../data/cutout_cdn:/cutout_cdn
+      - ../data/ghost_output:/ghost_ouput
     env_file:
       - ../env/.env.dev
   celery:
@@ -21,6 +22,7 @@ services:
     volumes:
       - ../app:/app
       - ../data/cutout_cdn:/cutout_cdn
+      - ../data/ghost_output:/ghost_ouput
     depends_on:
       - app
       - rabbitmq
