--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,12 +23,10 @@ services:
       - ../app:/app
       - ../data/cutout_cdn:/cutout_cdn
       - ../data/ghost_output:/ghost_ouput
-    depends_on:
-      - app
-      - rabbitmq
     env_file:
       - ../env/.env.dev
   rabbitmq:
+    restart: always
     image: rabbitmq:3.9-alpine
     ports:
       - "5672:5672"
@@ -41,10 +39,6 @@ services:
     command: bash entrypoints/docker-entrypoint.celery_beat.sh
     volumes:
       - ../app:/app
-    depends_on:
-      - app
-      - rabbitmq
-      - celery
     env_file:
       - ../env/.env.dev
   database:
@@ -59,11 +53,10 @@ services:
       - "3306:3306"
   nginx:
     restart: always
-    build: ../nginx
+    image: nginx:1.21-alpine
     volumes:
       - ../static:/static
       - ../data/cutout_cdn:/cutout_cdn
+      - ../nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "80:80"
-    depends_on:
-      - app
