fixed some bugs

--- a/app/host/fixtures/setup_test_transient.yaml
+++ b/app/host/fixtures/setup_test_transient.yaml
@@ -32,7 +32,7 @@
     dec_deg: 27.99642
 - model: host.Transient
   fields:
-    name: 2010H
+    name: 2010h
     tns_id: 3
     public_timestamp: 2010-01-16 00:00:00.000
     tns_prefix: SN
