--- a/app/host/fixtures/setup_test_task_register.yaml
+++ b/app/host/fixtures/setup_test_task_register.yaml
@@ -43,7 +43,7 @@
 - model: host.TaskRegister
   fields:
     transient: [2010ai]
-    task: [Local aperture photomety]
+    task: [Local aperture photometry]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
 - model: host.TaskRegister
@@ -67,30 +67,30 @@
 - model: host.TaskRegister
   fields:
     transient: [2010ag]
-    task: [Local aperture photomety]
+    task: [Local aperture photometry]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
 - model: host.TaskRegister
   fields:
-    transient: [2010H]
+    transient: [2010h]
     task: [Host match]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
 - model: host.TaskRegister
   fields:
-    transient: [2010H]
+    transient: [2010h]
     task: [Cutout download]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
 - model: host.TaskRegister
   fields:
-    transient: [2010H]
+    transient: [2010h]
     task: [Aperture construction]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
 - model: host.TaskRegister
   fields:
-    transient: [2010H]
-    task: [Local aperture photomety]
+    transient: [2010h]
+    task: [Local aperture photometry]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
