updated gitignore to keep some test cutouts

--- a/.gitignore
+++ b/.gitignore
@@ -138,11 +138,13 @@ quiverMaps/
 cutout_cdn/
 
 .dbdata/
-data/
+data/*
+!data/cutout_cdn
 
-!data/cutout_cdn/2010ag/
-!data/cutout_cdn/2010ai/
-!data/cutout_cdn/2010ah/
+data/cutout_cdn/*
+!data/cutout_cdn/2010ag/*
+!data/cutout_cdn/2010ai/*
+!data/cutout_cdn/2010ah/*
 
 
 static/
