updated gitignore to keep some test cutouts

--- a/.gitignore
+++ b/.gitignore
@@ -139,9 +139,9 @@ quiverMaps/
 
 .dbdata/
 
-data/database/*
-data/ghost_output/*
-data/test_database/*
+data/database/
+data/ghost_output/
+data/test_database/
 
 static/
 
