--- a/app/host/fixtures/setup_test_task_register.yaml
+++ b/app/host/fixtures/setup_test_task_register.yaml
@@ -37,7 +37,7 @@
 - model: host.TaskRegister
   fields:
     transient: [2010ai]
-    task: [Aperture construction]
+    task: [Global aperture construction]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
 - model: host.TaskRegister
@@ -48,6 +48,12 @@
     last_modified: 2000-01-23 01:23:45.678+00:00
 - model: host.TaskRegister
   fields:
+    transient: [2010ai]
+    task: [Global aperture photometry]
+    status: [not processed]
+    last_modified: 2000-01-23 01:23:45.678+00:00
+- model: host.TaskRegister
+  fields:
     transient: [2010ag]
     task: [Host match]
     status: [not processed]
@@ -61,13 +67,19 @@
 - model: host.TaskRegister
   fields:
     transient: [2010ag]
-    task: [Aperture construction]
+    task: [Global aperture construction]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
 - model: host.TaskRegister
   fields:
     transient: [2010ag]
     task: [Local aperture photometry]
+    status: [not processed]
+    last_modified: 2000-01-23 01:23:45.678+00:00
+- model: host.TaskRegister
+  fields:
+    transient: [2010ag]
+    task: [Global aperture photometry]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
 - model: host.TaskRegister
@@ -85,12 +97,18 @@
 - model: host.TaskRegister
   fields:
     transient: [2010h]
-    task: [Aperture construction]
+    task: [Global aperture construction]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
 - model: host.TaskRegister
   fields:
     transient: [2010h]
     task: [Local aperture photometry]
+    status: [not processed]
+    last_modified: 2000-01-23 01:23:45.678+00:00
+- model: host.TaskRegister
+  fields:
+    transient: [2010h]
+    task: [Global aperture photometry]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
