--- a/app/host/fixtures/setup_test_task_register.yaml
+++ b/app/host/fixtures/setup_test_task_register.yaml
@@ -54,6 +54,12 @@
     last_modified: 2000-01-23 01:23:45.678+00:00
 - model: host.TaskRegister
   fields:
+    transient: [2010ai]
+    task: [Host information]
+    status: [not processed]
+    last_modified: 2000-01-23 01:23:45.678+00:00
+- model: host.TaskRegister
+  fields:
     transient: [2010ag]
     task: [Host match]
     status: [not processed]
@@ -84,6 +90,12 @@
     last_modified: 2000-01-23 01:23:45.678+00:00
 - model: host.TaskRegister
   fields:
+    transient: [2010ag]
+    task: [Host information]
+    status: [not processed]
+    last_modified: 2000-01-23 01:23:45.678+00:00
+- model: host.TaskRegister
+  fields:
     transient: [2010h]
     task: [Host match]
     status: [not processed]
@@ -110,5 +122,11 @@
   fields:
     transient: [2010h]
     task: [Global aperture photometry]
+    status: [not processed]
+    last_modified: 2000-01-23 01:23:45.678+00:00
+- model: host.TaskRegister
+  fields:
+    transient: [2010h]
+    task: [Host information]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
