added propector classes

--- a/app/host/fixtures/setup_tasks.yaml
+++ b/app/host/fixtures/setup_tasks.yaml
@@ -16,3 +16,10 @@
 - model: host.Task
   fields:
     name: Host information
+- model: host.Task
+  fields:
+    name: Global host SED inference
+- model: host.Task
+  fields:
+    name: Local host SED inference
+
