--- a/docker/docker-compose.github_actions.yml
+++ b/docker/docker-compose.github_actions.yml
@@ -11,6 +11,7 @@ services:
     volumes:
       - ../app:/app
       - ../cutout_cdn:/cutout_cdn
+      - ../data/ghost_output:/prospector_output
   database:
     image: mysql:8.0
     environment:
