--- a/docker/docker-compose.continue.yml
+++ b/docker/docker-compose.continue.yml
@@ -42,7 +42,7 @@ services:
     env_file:
       - ../env/.env.dev
   database:
-    image: mysql:8.0
+    image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     env_file:
@@ -51,6 +51,7 @@ services:
       - ../data/database/:/var/lib/mysql/
     ports:
       - "3306:3306"
+    platform: linux/x86_64
   nginx:
     restart: always
     image: nginx:1.21-alpine
