--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -15,7 +15,7 @@ services:
     env_file:
       - ../env/.env.dev
   database:
-    image: mysql:8.0
+    image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     env_file:
@@ -24,3 +24,5 @@ services:
       - ../data/test_database/:/var/lib/mysql/
     ports:
       - "3306:3306"
+    platform: linux/x86_64
+     
