fixed redshift sdss bug

--- a/app/host/fixtures/setup_tasks.yaml
+++ b/app/host/fixtures/setup_tasks.yaml
@@ -22,4 +22,8 @@
 - model: host.Task
   fields:
     name: Local host SED inference
+- model: host.Task
+  fields:
+    name: Transient information
+
 
