added refernces to software used

--- a/app/host/fixtures/setup_acknowledgements.yaml
+++ b/app/host/fixtures/setup_acknowledgements.yaml
@@ -2,54 +2,67 @@
   fields:
     name: Astropy
     description: Used in almost all aspects of the project
-    github_url: https://github.com/astropy/astropy
+    repository_url: https://github.com/astropy/astropy
     website_url: https://www.astropy.org
     paper_url: https://ui.adsabs.harvard.edu/abs/2018AJ....156..123A/abstract
-    paper_doi: 10.3847/1538-3881/aabc4f
+    doi: 10.3847/1538-3881/aabc4f
     acknowledgement_text: This research made use of Astropy, (http://www.astropy.org) a community-developed core Python package for Astronomy.
 - model: host.Acknowledgement
   fields:
     name: NumPy
     description: Used in almost all aspects of the project
-    github_url: https://github.com/numpy/numpy
+    repository_url: https://github.com/numpy/numpy
     website_url: https://numpy.org
     paper_url: https://ui.adsabs.harvard.edu/abs/2020Natur.585..357H/abstract
-    paper_doi: 10.1038/s41586-020-2649-2
-    acknowledgement_text:
+    doi: 10.1038/s41586-020-2649-2
 - model: host.Acknowledgement
   fields:
     name: GHOST
     description: Used to match transients to host galaxies
-    github_url: https://github.com/uiucsn/astro_ghost
+    repository_url: https://github.com/uiucsn/astro_ghost
     website_url: https://ghost.ncsa.illinois.edu
     paper_url: https://ui.adsabs.harvard.edu/abs/2021ApJ...908..170G/abstract
-    paper_doi:  10.3847/1538-4357/abd02b
-    acknowledgement_text:
+    doi:  10.3847/1538-4357/abd02b
 - model: host.Acknowledgement
   fields:
     name: photutils
     description: Used for the host aperture photometry
-    github_url: https://github.com/astropy/photutils
+    repository_url: https://github.com/astropy/photutils
     website_url: https://photutils.readthedocs.io/en/stable/
     paper_url:
-    paper_doi: 10.5281/zenodo.6385735
+    doi: 10.5281/zenodo.6385735
     acknowledgement_text: This research made use of Photutils, an Astropy package for detection and photometry of astronomical sources (Bradley et al. 2020).
 - model: host.Acknowledgement
   fields:
     name: Astroquery
     description: Used for gathering external data for transients
-    github_url: https://github.com/astropy/astroquery
+    repository_url: https://github.com/astropy/astroquery
     website_url: https://astroquery.readthedocs.io/en/latest/
     paper_url: https://ui.adsabs.harvard.edu/abs/2019AJ....157...98G/abstract
-    paper_doi: 10.3847/1538-3881/aafc33
-    acknowledgement_text:
+    doi: 10.3847/1538-3881/aafc33
 - model: host.Acknowledgement
   fields:
-    name:
-    description:
-    github_url:
-    website_url:
-    paper_url:
-    paper_doi:
-    acknowledgement_text:
+    name: HiPS
+    description: Used in the cutout generation
+    repository_url: https://github.com/hipspy/hips
+    website_url: https://hips.readthedocs.io
+    paper_url: https://ui.adsabs.harvard.edu/abs/2015A%26A...578A.114F/abstract
+    doi: 10.1051/0004-6361/201526075
+    acknowledgement_text: The HiOS package is being developed as part of Google Summer of Code 2017 program by Adeel Ahmad, with Thomas Boch (CDS, Strasbourg) and Christoph Deil (MPIK, Heidelberg) as mentors. We would like to thank Google, CDS, MPIK for their support!
+- model: host.Acknowledgement
+  fields:
+    name: dynesty
+    description: Used in the inference of host galaxy parameters
+    repository_url: https://github.com/joshspeagle/dynesty
+    website_url: https://dynesty.readthedocs.io/en/latest/
+    paper_url: https://ui.adsabs.harvard.edu/abs/2020MNRAS.493.3132S/abstract
+    doi:  10.1093/mnras/staa278
+- model: host.Acknowledgement
+  fields:
+    name: Prospector
+    description: Used in the inference of host galaxy parameters
+    repository_url: https://github.com/bd-j/prospector
+    website_url: https://prospect.readthedocs.io/en/latest/
+    paper_url: https://ui.adsabs.harvard.edu/abs/2021ApJS..254...22J/abstract
+    doi: 10.3847/1538-4365/abef67
 
