--- a/app/host/fixtures/setup_test_transient.yaml
+++ b/app/host/fixtures/setup_test_transient.yaml
@@ -18,7 +18,7 @@
   fields:
     name: 2010ag
     tns_id: 1
-    public_timestamp: 2010-03-05 00:00:00.000
+    public_timestamp: 2010-03-05 00:00:00.000+00:00
     tns_prefix: SN
     ra_deg: 255.97346
     dec_deg: 31.50172
@@ -26,7 +26,7 @@
   fields:
     name: 2010ai
     tns_id: 2
-    public_timestamp: 2010-03-08 00:00:00.000
+    public_timestamp: 2010-03-08 00:00:00.000+00:00
     tns_prefix: SN
     ra_deg: 194.85012
     dec_deg: 27.99642
@@ -34,7 +34,7 @@
   fields:
     name: 2010H
     tns_id: 3
-    public_timestamp: 2010-01-16 00:00:00.000
+    public_timestamp: 2010-01-16 00:00:00.000+00:00
     tns_prefix: SN
     ra_deg: 121.6015
     dec_deg: 1.03586
