added transmission curves for sedpy

--- a/app/host/fixtures/initial/setup_acknowledgements.yaml
+++ b/app/host/fixtures/initial/setup_acknowledgements.yaml
@@ -65,4 +65,15 @@
     website_url: https://prospect.readthedocs.io/en/latest/
     paper_url: https://ui.adsabs.harvard.edu/abs/2021ApJS..254...22J/abstract
     doi: 10.3847/1538-4365/abef67
-
+- model: host.Acknowledgement
+  fields:
+    name: sedpy
+    description: Used in the inference of host galaxy parameters
+    repository_url: https://github.com/bd-j/sedpy
+    doi: 10.5281/zenodo.4582723
+- model: host.Acknowledgement
+  fields:
+    name: SVO Filter Profile Service
+    description: Used in the inference of host galaxy parameters
+    website_url: https://svo.cab.inta-csic.es/main/index.php
+    paper_url: https://ui.adsabs.harvard.edu/abs/2020sea..confE.182R/abstract
