--- a/docker/docker-compose.continue.yml
+++ b/docker/docker-compose.continue.yml
@@ -13,6 +13,8 @@ services:
       - ../data/cutout_cdn:/cutout_cdn
       - ../data/ghost_output:/ghost_output
       - ../data/ghost_output:/prospector_output
+      - ../data/tns_staging:/tns_staging
+      - ../data/transmission:/transmission
     env_file:
       - ../env/.env.dev
   celery:
@@ -25,6 +27,8 @@ services:
       - ../data/cutout_cdn:/cutout_cdn
       - ../data/ghost_output:/ghost_output
       - ../data/ghost_output:/prospector_output
+      - ../data/tns_staging:/tns_staging
+      - ../data/transmission:/transmission
     env_file:
       - ../env/.env.dev
   rabbitmq:
