--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: docker compose up
-        run: bash blast.tests.github_actions.sh
+        run: bash run/blast.tests.github_actions.sh
