--- a/.github/workflows/code_cov.yml
+++ b/.github/workflows/code_cov.yml
@@ -1,5 +1,11 @@
 name: Codecov
-on: [push]
+
+on:
+  pull_request:
+    branches: [main]
+  push:
+    branches: [main]
+
 jobs:
   run:
     runs-on: ${{ matrix.os }}
