--- a/.github/workflows/code_cov.yml
+++ b/.github/workflows/code_cov.yml
@@ -7,13 +7,9 @@ on:
     branches: [main]
 
 jobs:
-  run:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+  build:
+    runs-on: ubuntu-latest
     env:
-      OS: ${{ matrix.os }}
       PYTHON: '3.7'
     steps:
     - uses: actions/checkout@master
@@ -29,7 +25,6 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
         directory: ./coverage/reports/
         env_vars: OS,PYTHON
         fail_ci_if_error: true
