--- a/.github/workflows/code_cov.yml
+++ b/.github/workflows/code_cov.yml
@@ -27,7 +27,7 @@ jobs:
       uses: codecov/codecov-action@v3
       with:
         directory: ./coverage/reports/
-        env_vars: OS,PYTHON
+        env_vars: PYTHON
         fail_ci_if_error: true
         files: ./coverage1.xml,./coverage2.xml
         flags: unittests
