--- a/.github/workflows/code_cov.yml
+++ b/.github/workflows/code_cov.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: 3.7
     - name: Generate coverage report
       run: |
-        pip install -r app/requirments.txt
+        pip install -r app/requirements.txt
         pip install pytest
         pip install pytest-cov
         pytest --cov=./ --cov-report=xml
