--- a/.github/workflows/code_cov.yml
+++ b/.github/workflows/code_cov.yml
@@ -20,9 +20,8 @@ jobs:
     - name: Generate coverage report
       run: |
         pip install -r app/requirements.txt
-        pip install pytest
-        pip install pytest-cov
-        pytest --cov=./ --cov-report=xml
+        pip install coverage 
+        coverage run -m unittest discover -p "*_test.py"
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
