--- a/.github/workflows/code_cov.yml
+++ b/.github/workflows/code_cov.yml
@@ -10,26 +10,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      PYTHON: '3.8'
+      MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
     steps:
-    - uses: actions/checkout@master
-    - name: Setup Python
-      uses: actions/setup-python@master
-      with:
-        python-version: 3.8
-    - name: Generate coverage report
-      run: |
-        pip install -r app/requirements.txt
-        pip install coverage 
-        coverage run -m unittest discover -p "*_test.py"
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        directory: ./coverage/reports/
-        env_vars: PYTHON
-        fail_ci_if_error: true
-        files: ./coverage1.xml,./coverage2.xml
-        flags: unittests
-        name: codecov-umbrella
-        path_to_write_report: ./coverage/codecov_report.txt
-        verbose: true
+      - uses: actions/checkout@v3
+      - name: docker compose up
+        run: bash run/blast.codecov.github_actions.sh
