--- a/.github/workflows/code_cov.yml
+++ b/.github/workflows/code_cov.yml
@@ -15,3 +15,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: docker compose up
         run: bash run/blast.codecov.github_actions.sh
+      - uses: actions/checkout@master
+      - uses: codecov/codecov-action@v3
+        with:
+          flags: unittests # optional
+          name: codecov-umbrella # optional
+          fail_ci_if_error: true # optional (default = false)
+          verbose: true # optional (default = false)
