added plotting utils and updated home page

--- a/env/.env.dev.example
+++ b/env/.env.dev.example
@@ -12,3 +12,6 @@ MYSQL_ROOT_PASSWORD =
 # Django
 DJANGO_SECRET_KEY =
 DJANGO_DEBUG =
+DJANGO_SUPERUSER_PASSWORD = password
+DJANGO_SUPERUSER_USERNAME = admin
+DJANGO_SUPERUSER_EMAIL = test@gamil.com
