--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -62,7 +62,7 @@ services:
     restart: always
     image: nginx:1.21-alpine
     volumes:
-      - ../static:/static
+      - ../app/static:/static
       - ../data/cutout_cdn:/cutout_cdn
       - ../nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
