got rabbitmq management dashboard to work

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,4 +12,9 @@ server {
 	location /static/ {
 		alias /static/;
 	}
+
+    location /rabbitmq {
+          proxy_pass http://rabbitmq:15672/;
+          rewrite ^/rabbitmq/(.*)$ /$1 break;
+    }
 }
