--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -33,9 +33,12 @@ services:
       - ../env/.env.dev
   rabbitmq:
     restart: always
-    image: rabbitmq:3.9-alpine
+    image: rabbitmq:3.10.6-management-alpine
     ports:
       - "5672:5672"
+      - "15672:15672"
+    volumes:
+      - ../data/rabbitmq_data:/data
     env_file:
       - ../env/.env.dev
   celery_beat:
@@ -67,3 +70,11 @@ services:
       - ../nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "80:80"
+  flower:
+    image: mher/flower
+    command: sh entrypoints/docker-entrypoint.flower.sh
+    ports:
+      - "8888:8888"
+    volumes:
+      - ../app:/app
+
