--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -7,7 +7,7 @@ services:
       context: ../app/
     command: bash entrypoints/docker-entrypoint.app.test.sh
     ports:
-      - "8000:8000"
+      - 8000:${WEB_APP_PORT}
     volumes:
       - ../app:/app
       - ../data/cutout_cdn:/cutout_cdn
@@ -21,10 +21,11 @@ services:
     image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
     restart: always
-    env_file:
-      - ../env/.env.dev
+    environment:
+      - "MYSQL_ROOT_PASSWORD=password"
+      - "MYSQL_DATABASE=blast_db"
     volumes:
       - ../data/test_database/:/var/lib/mysql/
     ports:
-      - "3306:3306"
+      - 3306:${DATABASE_PORT}
     platform: linux/x86_64
