--- a/docker/docker-compose.github_actions.yml
+++ b/docker/docker-compose.github_actions.yml
@@ -19,7 +19,7 @@ services:
     image: mysql:8.0
     environment:
       - "MYSQL_ROOT_PASSWORD=password"
-      - "MYSQL_DATABASE=django_db"
+      - "MYSQL_DATABASE=blast_db"
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     volumes:
