--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: ../app/
     command: bash entrypoints/docker-entrypoint.app.sh
     ports:
-      - 8000:${WEB_APP_PORT}
+      - "8000:${WEB_APP_PORT}"
     volumes:
       - ../app:/app
       - ../data/cutout_cdn:/cutout_cdn
@@ -69,7 +69,7 @@ services:
       - ../data/cutout_cdn:/cutout_cdn
       - ../nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - 80:${WEB_SERVER_PORT}
+      - "80:${WEB_SERVER_PORT}"
     env_file:
       - ../env/.env.dev
   flower:
@@ -77,7 +77,7 @@ services:
       context: ../flower/
     command: bash entrypoints/docker-entrypoint.flower.sh
     ports:
-      - 8888:${FLOWER_PORT}
+      - "8888:${FLOWER_PORT}"
     volumes:
       - ../app/entrypoints:/data/entrypoints
     env_file:
